--- a/index.html
+++ b/index.html
@@ -255,34 +255,17 @@
         });
 
         downloadButton.addEventListener('click', () => {
-    // Calculer le temps écoulé et la vitesse moyenne
-    const elapsed = intervalId ? Math.floor((new Date() - startTime) / 1000) : 0; // Temps total écoulé
-    const averageSpeed = calculateSpeed(elapsed, totalDistance); // Vitesse moyenne pour la distance totale
-
-    // Préparer le texte pour le téléchargement
+    const elapsed = intervalId ? Math.floor((new Date() - startTime) / 1000) : 0;
+    const averageSpeed = calculateSpeed(elapsed, totalDistance);
     const finalResultText = `Temps final de votre course : ${formatTime(elapsed)} - Vitesse moyenne : ${averageSpeed} km/h\n\n`;
     const data = intermediateTimes.map(entry => 
         `Distance: ${entry.distance}m - Temps: ${formatTime(entry.elapsed)} - Vitesse: ${entry.speed} km/h`
     ).join('\n');
-
-    // Créer le blob
-    const blob = new Blob([finalResultText + data], { type: 'text/plain' });
-    const url = URL.createObjectURL(blob);
-
-    // Vérification pour appareils mobiles
-    if (navigator.userAgent.match(/(iPad|iPhone|iPod)/i)) {
-        // Ouvrir le fichier dans une nouvelle fenêtre sur iOS
-        window.open(url, '_blank');
-    } else {
-        // Télécharger directement pour les autres appareils
-        const a = document.createElement('a');
-        a.href = url;
-        a.download = 'temps_intermediaires.txt';
-        a.click();
-    }
-
-    // Révoquer l'URL après utilisation
-    URL.revokeObjectURL(url);
+    
+    const fullText = finalResultText + data;
+    const newWindow = window.open('', '_blank');
+    newWindow.document.write(`<pre>${fullText}</pre>`);
+    newWindow.document.close();
 });
     </script>
 </body>
